# trixie

./: Cargo.toml  makefile
src/: backend.rs  box_drawing.rs  config.rs  embedded_ipc.rs  embedded_window.rs  font.rs  handlers.rs  input.rs  lib.rs  main.rs  pixelui.rs  render.rs  session.rs  shader_config.rs  shader_ipc.rs  shader_pass.rs  shaper.rs  shared_frame_shm.rs  state.rs  twm_drop_in.rs  util.rs
