[package]
name = "trixie"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trixie"
path = "src/main.rs"

[dependencies]
smithay = { version = "0.7.0", features = [
    "backend_drm",
    "backend_gbm",
    "backend_udev",
    "backend_libinput",
    "backend_egl",
    "backend_session_libseat",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "use_system_lib",
] }
rustix = { version = "1.0", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
xkb = "0.3.0"
xkbcommon = "0.7.0"
notify = "6"
calloop = "0.14.4"
ratatui = "0.26"
crossterm = "0.27"

[[bin]]
name = "cheatsheet"
path = "src/bin/cheatsheet.rs"

